Url encoding adden to meme query.

--- a/lethe-config.json
+++ b/lethe-config.json
@@ -31,8 +31,8 @@
     "yq": false,
     "pl": false,
     "shuffle": true,
-    "slap": false,
-    "meme": false,
-    "vote": false
+    "sl": false,
+    "me": false,
+    "cl": true
   }
 }
